--- a/Raysoft.API/appsettings.json
+++ b/Raysoft.API/appsettings.json
@@ -3,7 +3,7 @@
         "SqlServer": "Data Source=37.247.104.67;Initial Catalog=MobileApp;User ID=sa;Password=Mykhut2525;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
     },
     "TokenOptions": {
-        "Audience": [ "www.authserver.com", "www.miniapi1.com", "www.miniapi2.com", "www.miniapi3.com" ],
+        "Audience": [ "www.authserver.com", "www.miniapi1.com", "www.miniapi2.com" ],
         "Issuer": "www.authserver.com",
         "AccessTokenExpiration": 5,
         "RefreshTokenExpiration": 600,
